<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.designthinking.design2app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/ic_settings_black_24dp"
                android:contentDescription="@string/img_desc" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/app_title"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/ic_account_circle_black_24dp"
                android:contentDescription="@string/img_desc" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110sp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@android:drawable/dialog_holo_dark_frame"
                    android:contentDescription="@string/img_desc"
                    app:srcCompat="@android:drawable/ic_menu_mapmode" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/app_title2"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@android:drawable/dialog_holo_dark_frame"
                    android:contentDescription="@string/img_desc"
                    app:srcCompat="@android:drawable/ic_menu_sort_alphabetically" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/app_title3"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95sp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc"
                app:srcCompat="@drawable/ic_train_black_24dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:text="@string/transport_button"
                android:textColor="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc"
                app:srcCompat="@drawable/ic_directions_bus_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:background="@drawable/border"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@android:drawable/dialog_holo_dark_frame"
                    android:contentDescription="@string/img_desc"
                    app:srcCompat="@drawable/ic_description_black_24dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/visa_help"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@android:drawable/dialog_holo_dark_frame"
                    android:contentDescription="@string/img_desc"
                    app:srcCompat="@drawable/ic_forum_black_24dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/forum"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="20sp">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc"
                android:padding="5dp"
                app:srcCompat="@drawable/if_square_twitter_317723" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc"
                android:padding="5dp"
                app:srcCompat="@drawable/if_square_facebook_317727" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc"
                android:padding="5dp"
                app:srcCompat="@drawable/snapchat_icon" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc"
                android:padding="5dp"
                app:srcCompat="@drawable/if_instagram_317738" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
